cmake_minimum_required(VERSION 3.26)
project(cppexe)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

#set(CMAKE_CHARSET "UTF-8")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finput-charset=UTF-8")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
add_executable(main main.cpp)
#递归遍历所有的cpp文件
#file (GLOB_RECURSE files *.cpp)
#
##将所有的cpp文件单独生成可执行文件
#foreach (file ${files})
#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
#    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
#endforeach ()
add_executable(Time Time.cpp)
add_executable(Date Date.cpp)
add_executable(catalan catalan.cpp)
add_executable(IntegerSplit IntegerSplit.cpp)
add_executable(week week.cpp)

add_executable(convertDatatype1 convertDatatype1.cpp)

add_executable(stringAsinput stringAsinput.cpp)
add_executable(istringstreamex istringstreamex.cpp)

add_executable(sortTest sortTest.cpp)

add_executable(datatypeconverse3 covertdatatype/datatypeconverse3.cpp)
add_executable(datatypeconverse2 covertdatatype/datatypeconverse2.cpp)
add_executable(datatypeconverse1 covertdatatype/datatypeconverse1.cpp)
add_executable(jinzhi 进制转换.cpp)
add_executable(jinzhidaizimu 进制转换带字母.cpp)
add_executable(stringtoint stringtoint.cpp)
add_executable(dancifanzhuan convertwords.cpp)
add_executable(hanxindianbing 韩信点兵.cpp)
add_executable(f0805 f0805.cpp)
add_executable(miyunsuan operatoroverload/powercaculate.cpp)
add_executable(shiliangchaji operatoroverload/vectorproduct.cpp)
add_executable(qsortexample Clanguage/qsortexample.cpp)
add_executable(Point operatoroverload/Point.cpp)
add_executable(integer operatoroverload/integer.cpp)
add_executable(date operatoroverload/date.cpp)
add_executable(countwords oj/oj1085.cpp)
add_executable(splitstring splitstring.cpp)
add_executable(convertwords convertwords.cpp)
add_executable(getWords getWords.cpp)